test/invalid-semantics/59809_negating_int/negating_int.mag
-- Author: 59809, Manuel Leitão

fun main (_) : Unit -> Unit =
    var x : Int = 5;
    var y : Bool = !x;
    print(y)